# oryx

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  questions.md  quickstart.md  requirements.txt  ruff.toml
.github/workflows/: test.yml
keyword_lab/: __init__.py  cli.py
presets/: contracting_ae.yaml
src/keyword_lab/: __init__.py  cli.py  cluster.py  config.py  default_config.yaml  geo.py  io.py  llm.py  metrics.py  nlp.py  pipeline.py  schema.py  scrape.py  stopwords.py
src/oryx/: __init__.py  __main__.py  analysis.py  bilingual.py  checkpoint.py  cli.py  cluster.py  content_gap.py  default_config.yaml  entities.py  generators.py  geo.py  io.py  linguistics.py  llm.py  metrics.py  nlp.py  pipeline.py  qa.py  schema.py  scrape.py
src/oryx/resources/: boilerplate.txt  geo_patterns.json
src/oryx_keyword_lab.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_analysis.py  test_io_metadata.py  test_llm.py  test_metrics_uae.py  test_nlp_sentiment.py  test_pipeline_smoke.py  test_quality_filters.py  test_schema.py
