[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "keyword-lab"
version = "0.1.0"
description = "CLI for discovering and clustering keywords"
requires-python = ">=3.9"
dependencies = []

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
